<resources>
    <string name="app_name">Turistiando2</string>
    <string name="resenahoteles">
    Podras encontraras  aqui  lugares sumamente comodos para disfrutar  placidamente de tus estadia en este hermoso pueblo.
    </string>
    <string name="resenarestaurantes">
        Se testigo de la increible gastronomia que tenemos para ofrecer comiendo en restaurantes de todo tipo y con una increible variedad
    </string>
    <string name="sitiosturisticos">
        Descubre la historia y la cultura  del pueblo por medio de sus lugares y edificaciones  que tienen mas para ofrecer de lo que puedas imaginar
    </string>
    <string name="opcion1">
        Ingles
    </string>
    <string name="opcion2">
        Español
    </string>
    <string name="opcion3">
        Italiano
    </string>
    <string name="opcion4">
        Acerca de
    </string>
    <string name="hotel">
        Hoteles
    </string>
    <string name="restaurantes">
        Restaurantes
    </string>
    <string name="lugares">
        Lugares
    </string>
    <string name="vermas">
        Ver mas
    </string>
    <string name="bienvenido">
    Bienvenido
    </string>
    <string name="midescripcion">
    Joven estudiante de desarrollo de software Junior con habilidades para el desarrollo creativo de paginas y programas para su uso tanto en moviles y web
    </string>
    <string name="contacto">
    Contacto :
    </string>
    <string name="rango">
    Rango de precios :
    </string>
    <string name="telefonos">
    Telefonos :
    </string>
    <string name="plato">
    Plato recomendado : Mariscos tradicionales
    </string>


</resources>