<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo1"
    tools:context=".LugaresHome">

    <ImageView
        android:id="@+id/restaurantelogo"
        android:layout_width="64dp"
        android:layout_height="61dp"
        android:src="@drawable/lugar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.1" />

    <TextView
        app:layout_constraintTop_toBottomOf="@id/restaurantelogo"
        android:text="@string/lugares"
        android:textStyle="bold"
        android:layout_width="60dp"
        android:layout_height="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.02"
        />


    <ImageView
        android:id="@+id/img1"
        android:layout_width="290dp"
        android:layout_height="255dp"
        android:src="@drawable/iglesia"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/descripcion"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/descripcion"
        android:layout_width="201dp"
        android:layout_height="100dp"
        android:text="@string/sitiosturisticos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/restaurantelogo"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/vermassitiosturisticos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/vermas"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img1"
        app:layout_constraintVertical_bias="0.2" />

</androidx.constraintlayout.widget.ConstraintLayout>