<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView

    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    app:cardElevation="10dp"
    app:cardUseCompatPadding="true">
<androidx.constraintlayout.widget.ConstraintLayout


    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <TextView
        android:id="@+id/nombrerestaurantes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="Con Tradicion-Restaurante"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintVertical_bias="0.1"
        app:layout_constraintHorizontal_bias="0.05"/>

    <ImageView
        android:id="@+id/imgrestaurante"
        android:layout_width="wrap_content"
        android:layout_height="250dp"
        android:src="@drawable/restaurente1"
        app:layout_constraintTop_toBottomOf="@id/nombrerestaurantes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias="0.05"
        />

    <TextView
        android:id="@+id/rango"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:text="@string/rango"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imgrestaurante"
        app:layout_constraintVertical_bias="0" />
    <TextView
        android:id="@+id/preciosRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/imgrestaurante"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/rango"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="(25.000 COP - 90.000 COP)"
        android:textSize="15dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.05"/>
    <TextView
        android:id="@+id/contactolistaRestaurantes"
        android:layout_width="144dp"
        android:layout_height="37dp"
        android:text="@string/telefonos"
        android:textSize="15dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.05"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/rango"
        app:layout_constraintVertical_bias="0" />
    <TextView
        android:id="@+id/numeros"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/rango"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/contactolistaRestaurantes"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="32351116789"
        android:textSize="15dp"
        app:layout_constraintVertical_bias="0"
        app:layout_constraintHorizontal_bias="0.05"/>

    <TextView
        android:id="@+id/platoRestaurante"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/contactolistaRestaurantes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/plato"
        android:textSize="15dp"
        app:layout_constraintVertical_bias="0.05"
        app:layout_constraintHorizontal_bias="0.05"/>




</androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>